# arrancador

./: .gitignore  AGENTS.md  TEST_STRATEGY.md  check_build.bat  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  daily-release.yml
.zenflow/tasks/better-design-0050/: plan.md  report.md  spec.md
.zenflow/tasks/new-task-cfe1/: plan.md  spec.md
.zenflow/tasks/tests-architecture-ffd6/: benchmarks.md  plan.md  requirements.md  spec.md
e2e/: smoke.spec.ts  tauri-mock.ts
src/: App.tsx  index.css  main.tsx  providers.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  database.rs  db.rs  games.rs  lib.rs  main.rs  metadata.rs  scan.rs  settings.rs  stats.rs  system.rs  tracker.rs
src-tauri/src/backup/: engine.rs  save_locator.rs  sqoba_manifest.rs
src-tauri/src/domain/: games.rs
src-tauri/src/services/: fs.rs  games.rs  mod.rs  tracker.rs
src/components/: AppSidebar.tsx  FileList.tsx  GameCard.tsx  ProgressBar.tsx  RawgMetadataPrompt.tsx  ScanButton.tsx  Sidebar.tsx  ToastProvider.tsx
src/components/ui/: button.tsx  sidebar.tsx  switch.tsx
src/hooks/: use-mobile.ts  useGameStatus.ts  useScan.tsx  useSettingsState.ts
src/lib/: api.ts
src/pages/: GameDetail.tsx  Home.tsx  Layout.tsx  Library.tsx  Scan.tsx  Search.tsx  Settings.tsx  Sqoba.tsx  Statistics.tsx  SystemInfo.tsx
src/store/: FavoritesContext.tsx  GamesContext.tsx  ScanContext.tsx
src/test/: api.test.ts  game-detail.test.tsx  games-context.test.tsx  library.test.tsx  scan.test.tsx  settings.test.tsx  setup.ts  smoke.test.tsx  utils.test.ts
src/types/: index.ts
