[package]
name        = "Arrancador"
version     = "0.1.0"
edition     = "2021"
description = "Next-gen gaming library for community"
authors     = ["you"]

[lib]
name       = "arrancador_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener  = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-updater = "2"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
serde_yaml           = "0.9"
jwalk                = "0.8"
rayon                = "1.8"
lazy_static          = "1.4"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client for RAWG API
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for game IDs
uuid = { version = "1", features = ["v4", "serde"] }

# File operations
walkdir = "2"
flate2 = "1"

# Process execution for Ludusavi
which = "6"

# Directory paths
dirs = "5"

# URL encoding
urlencoding = "2"
zip = "7.2.0"
winreg = "0.55.0"
regex = "1.12.2"
glob = "0.3.3"
sysinfo = "0.37.2"
tauri-plugin-autostart = "2.5.1"
num_cpus = "1.16"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl", "Win32_Security", "Win32_System_Threading", "Win32_System_Com", "Win32_UI_Shell", "Win32_Graphics_Gdi"] }
wmi = "0.14"

[dev-dependencies]
tempfile = "3.12.0"
